--- a/Certify/packages.config
+++ b/Certify/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ILMerge" version="3.0.41" targetFramework="net40" />
-  <package id="MSBuild.ILMerge.Task" version="1.1.3" targetFramework="net40" />
+  <package id="dnMerge" version="0.5.15" targetFramework="net40" developmentDependency="true" />
 </packages>
