New use cases to abuse ManageCA permission
Two new commands have been added:

- coerceauth: It will abuse the CDP extension to coerce the CA server to perform an authentication attempt to a remote server.
- writefile: It will abuse the CDP extension to write an arbitrary file to a local or remote path. The CA server must have write permission over the remote share.  The most useful use case for this functionality is to obtain a web shell, but it could also been used to perform arbitrary file overwrite/others-.

--- a/Certify/Certify.csproj
+++ b/Certify/Certify.csproj
@@ -86,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\CAs.cs" />
+    <Compile Include="Commands\CoerceAuth.cs" />
     <Compile Include="Commands\Download.cs" />
     <Compile Include="Commands\Find.cs" />
     <Compile Include="Commands\ICommand.cs" />
@@ -93,6 +94,7 @@
     <Compile Include="Commands\SetConfig.cs" />
     <Compile Include="Commands\PKIObjects.cs" />
     <Compile Include="Commands\Request.cs" />
+    <Compile Include="Commands\WriteFile.cs" />
     <Compile Include="Domain\ADObject.cs" />
     <Compile Include="ArgumentParser.cs" />
     <Compile Include="ArgumentParserResult.cs" />
