--- a/Certify/packages.config
+++ b/Certify/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="dnMerge" version="0.5.15" targetFramework="net40" developmentDependency="true" />
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net45" />
+  <package id="CommandLineParser" version="2.9.1" targetFramework="net472" />
+  <package id="dnMerge" version="0.5.15" targetFramework="net472" developmentDependency="true" />
 </packages>
