--- a/Certify/Certify.csproj
+++ b/Certify/Certify.csproj
@@ -100,6 +100,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\CSRGenerate.cs" />
     <Compile Include="Commands\ManageCa.cs" />
     <Compile Include="Commands\ManageSelf.cs" />
     <Compile Include="Commands\ManageTemplate.cs" />
